# Algorithm-Design-Project

./: CMakeLists.txt  README.md
apresentacao/: TrabalhoDA.pptx
codigo/: README.md  main.cpp  optimizer.cpp  optimizer.h  package.cpp  package.h  truck.cpp  truck.h
documentacao/: dconfig
documentacao/html/: annotated.html  class_optimizer-members.html  class_optimizer.html  class_package-members.html  class_package.html  class_truck-members.html  class_truck.html  classes.html  files.html  functions.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  optimizer_8h_source.html  package_8h_source.html  pages.html  truck_8h_source.html
documentacao/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
input/: carrinhas2.txt  encomendas2.txt
